changing the text font

--- a/style.css
+++ b/style.css
@@ -19,3 +19,19 @@
     align-items: center;
     justify-content: space-between;
 }
+.logo{
+    width: 120px;
+    cursor: pointer;
+}
+.navbar ul li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+}
+
+.navbar{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    
+}
