--- a/style.css
+++ b/style.css
@@ -28,10 +28,8 @@
     display: inline-block;
     margin: 0 20px;
 }
-
-.navbar{
-    text-decoration: none;
-    color: #fff;
-    text-transform: uppercase;
-    
+.navbar ul li a{
+   text-decoration: none;
+   color: #fff;
+   text-transform: uppercase;
 }
