--- a/style.css
+++ b/style.css
@@ -37,10 +37,46 @@
 .navbar ul li::after{
     content: '';
     height: 3px;
-    width: 100%;
+    width: 0;
     background: #009688;
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom:-10px;
+    transition: 0.5s;
 
+}
+.navbar ul li:hover::after{
+    width: 100%;
+}
+.content{
+   width: 100%;
+   position: absolute;
+   top: 30%;
+   transform: translateY(-50);
+   text-align: center;
+   color: #fff;
+
+}
+.content{
+    font-size: 35px;
+    margin-top: 20px;
+
+
+}
+.content p{
+    margin: 20px auto;
+    font-weight: 100;
+    line-height:25px;
+}
+button{
+    width: 200px;
+    padding: 15px 0;
+    text-align: center;
+    margin: 20px 10px;
+    border-radius: 25px;
+    font-weight: bold;
+    border: 2px solid #009688;
+    background: transparent;
+    color: #fff;
+    cursor: pointer;
 }
