--- a/style.css
+++ b/style.css
@@ -80,3 +80,16 @@ button{
     color: #fff;
     cursor: pointer;
 }
+*{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+.banner{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(images/tour.jpg);
+    background-size: cover;
+    background-position: center;
+
+}
