--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ h2{
 .input-box input {
     width: 100%;
     height: 50px;
-    background: red;
+    background: rgb(108, 95, 95);
     border: none;
     outline: none;
     font-size: 1em;
