--- a/style.css
+++ b/style.css
@@ -225,3 +225,25 @@ ul li a:hover {
 ul li:hover ul.dropdown {
     display: block;
 }
+.table-box{
+    margin: 50px auto;
+}
+.table-row{
+    display: table;
+    width: 80%;
+    margin: 10px auto;
+    font-family: sans-serif;
+    background: #6891e3;
+    padding: 12px 0;
+    color: #4d1316;
+    font-size: 17px;
+    box-shadow: 0 1px 4px 0 rgba(0,0,50,0.3);
+}
+.table-cell{
+    display: table-cell;
+    width: 30%;
+    text-align: center;
+    padding: 4px 0;
+    border-right: 1px solid #d6d4;
+    vertical-align: middle;
+}
