--- a/style.css
+++ b/style.css
@@ -253,3 +253,56 @@ ul li:hover ul.dropdown {
     color: #fff;
     font-weight: 600;
 }
+.collapsible{
+    max-width: 450px;
+    overflow: hidden;
+    font-weight: 500;
+}
+.collapsible label {
+font-weight: 600;
+background: #fff;
+box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .1), 0 4px 11px 0 rgba(0, 0, 0, .08);
+color: #1c1c6b;
+display: block;
+margin-bottom: 10px;
+cursor: pointer;
+padding: 15px;
+border-radius: 4px;
+}
+.collapsible label:after {
+    content: "";
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    width: 18px;
+    height: 18px;
+    background: url(images/compass.jpg) no-repeat 0 0;
+
+}
+.collapsible-text {
+    max-height: 1px;
+    overflow: hidden;
+    border-radius:  4px;
+    line-height: 1.4;
+    position:  relative;
+    top: -100%;
+    opacity: 0.5;
+    transition: all 0.3s ease;
+}
+.collapsible input:checked ~ .collapsible-text{
+max-height: 300px;
+padding: 25px;
+background: #fff;
+box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .1), 0 4px 11px 0 rgba(0, 0, 0, .08);
+opacity: 1;
+top: 0;
+}
+.collapsible-text h2 {
+    margin-bottom: 10px;
+    padding: 15px 15px 0;
+    color: #1c1c6b;
+}
+.collapsible-text p {
+    padding-left: 15px;
+    padding-right: 15px;;
+}
