--- a/flight.css
+++ b/flight.css
@@ -63,7 +63,7 @@ body{
     left: 100px;
     width: 300px;
     text-align: left;
-    color: #eee;
+    color: #db0606;
     transform: translate(0, -50%);
     font-family: system-uli;
     display: none;
