--- a/flight.css
+++ b/flight.css
@@ -134,3 +134,15 @@ body{
     background: #ababab;
     color: #fff;
 }
+button{
+    width: 200px;
+    padding: 8px 0;
+    text-align: center;
+    margin: 20px 10px;
+    border-radius: 25px;
+    font-weight: bold;
+    border: 2px solid #07453e;
+    background: transparent;
+    color: #221616;
+    cursor: pointer;
+}
