--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ section {
     align-items: center;
     width: 100%;
     height: 100vh;
-    background: url('images/compass.jpg') no-repeat;
+    background: url('images/img2.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -180,7 +180,7 @@ button{
     cursor: pointer;
 }
 body{
-    background-image: url(images/flight.jpg);
+    background-image: url(images/img3.jpg);
 }
 #p1{
     color: tomato;
@@ -276,7 +276,7 @@ border-radius: 4px;
     top: 15px;
     width: 18px;
     height: 18px;
-    background: url(images/compass.jpg) no-repeat 0 0;
+    background: url(images/img2.jpg) no-repeat 0 0;
 
 }
 .collapsible-text {
